# Utils

./: .gitignore  .gitmodules  CMakeLists.txt  CircleBuffer.h  Dockerfile  FSMAction.h  FSMEvent.h  FSMGuard.h  FSMState.h  FSMTransition.h  FSMTransitionTable.h  README.md  README.ru.md  TypeColleection.h  library.json  main.cpp  search.cmake
.cmake-c-only-probe/: CMakeLists.txt  probe_dummy.c  test_c_includes.c
.github/workflows/: build-test.yml  run-tests.yml
inc/containers/: CircleBuffer.hpp  circle_buf_gc.h
inc/core/: archiver.h  gtime.h  gutils.h
inc/cxx_meta/: TypeListService.hpp  variables.hpp
inc/patterns/: fsm_gc.h  gpid.hpp  gstate.h
src/containers/: circle_buf_gc.c
src/core/: archiver.c  bedug.c  glog.c  gstring.c  gtime.c  gutils.c
src/cxx_meta/: CodeStopwatch.cpp  gtimer.cpp
src/patterns/: fsm_gc.c  gstate.c
test/: CMakeLists.txt  test.cpp  test_FiniteStateMachine.cpp  test_circle_buf_gc.cpp  test_fsm_gc.cpp  test_gc.c  test_gc.h  test_gsort.cpp  test_gstate.cpp  test_gstring.cpp  test_gversion.cpp  test_int_float.cpp
test/containers/: test_CircleBuffer.cpp  test_queue_gc.cpp
test/core/: test_archiver.cpp  test_bedug.cpp  test_glog.cpp  test_gtime.cpp  test_gutils.cpp
test/cxx_meta/: test_CodeStopwatch.cpp  test_gtimer.cpp
test/patterns/: test_fsm_gc.cpp  test_gpid.cpp  test_gstate.cpp
utils/: CMakeLists.txt
utils/Archive/: archiver.c  archiver.h
utils/Buffer/: CircleBuffer.h  CircleBuffer.hpp  GQueue.hpp  GStack.hpp  circle_buf_gc.c  circle_buf_gc.h  gsort.hpp  queue_gc.c  queue_gc.h
utils/Debug/: bedug.c  bedug.cpp  bedug.h  bmacro.h  debug.h  gmacro.h
utils/FSM/: FSMAction.h  FSMCharHash.h  FSMEvent.h  FSMGuard.h  FSMKey.h  FSMState.h  FSMTransition.h  FSMTransitionTable.h  FiniteStateMachine.h  fsm_gc.c  fsm_gc.h
utils/HALDEFS/: hal_defs.c  hal_defs.h
utils/Log/: CodeStopwatch.cpp  CodeStopwatch.h  Log.h  glog.c  glog.h
utils/Time/: GTime.cpp  GTime.h  Time.cpp  Time.h  Timer.cpp  Timer.h  gtime.c  gtime.h  gtimer.cpp  gtimer.h
utils/TypeList/: TypeListBuilder.h  TypeListService.h
utils/Types/: IntFloat.cpp  IntFloat.hpp  glambda.hpp
utils/Utils/: gutils.c  gutils.h  gversion.c  gversion.h  utils.c  utils.h  variables.h
utils/gpid/: gpid.cpp
utils/gstate/: gstate.c  gstate.h
utils/gstring/: gstring.c  gstring.h
